// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accepts an option for the language 1`] = `
"import messageformat from 'messageFormat';
import React from 'react';

export default MyInternationlizedApp;

function MyInternationlizedApp({ name }) {
  return <div>
      <h1>{\\"Hola Mundo\\"}</h1>
      <div>{\\"\\\\xA1Es un lindo d\\\\xEDa!\\"}</div>
      <div>{messageFormat('\\\\xA1Hola {name}!', { name })}</div>
    </div>;
}"
`;

exports[`transpiles __i18n__ to the string it represents 1`] = `
"import messageformat from 'messageFormat';
import React from 'react';

export default MyInternationlizedApp;

function MyInternationlizedApp({ name }) {
  return <div>
      <h1>{\\"Hello world\\"}</h1>
      <div>{\\"It is a nice day!\\"}</div>
      <div>{messageFormat('Hi there {name}!', { name })}</div>
    </div>;
}"
`;
